# openagent

./: .gitignore  OPENAGENT_ARCHITECTURE.md  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: frontend-ci.yml
backend/: README_DESIGN.md  __init__.py  config_loader.py
backend/api/: README_DESIGN.md  __init__.py  app.py  errors.py  schemas.py  ws_handler.py
backend/eval_/: README_DESIGN.md  __init__.py
backend/evolve/: README_DESIGN.md
backend/ingestion/: README_DESIGN.md  __init__.py  chunking.py  document_extract.py
backend/kernel/: README_DESIGN.md  __init__.py  blackboard.py  budget.py  engine.py  multi_chat.py  router.py  run_context.py  trace.py
backend/memory/: README_DESIGN.md  __init__.py  consolidation.py  eval_report.py  fragment_extract.py  fragment_llm.py  reconstruct.py  session_store.py
backend/models/: README_DESIGN.md  __init__.py  base.py  embeddings.py  factory.py  ollama_adapter.py  ollama_client_util.py  openai_adapter.py  tokenizer.py  vllm_adapter.py
backend/ocr/: README_DESIGN.md  __init__.py
backend/prompts/: __init__.py  (+3 more)
config/: README_DESIGN.md  constitution.md  openagent.yaml
constitutions/: README_DESIGN.md
docker/: README_DESIGN.md
docs/: CONFIGURATION.en.md  CONFIGURATION.md  DEVELOPMENT_PLAN.md  README_DESIGN.md
eval/: README_DESIGN.md
frontend/: .eslintrc.json  .gitignore  .npmrc  README_DESIGN.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
scripts/: README_DESIGN.md  chat_once.py  start_server.py
skills/: README_DESIGN.md
tests/: README_DESIGN.md
(+100 files in other folders)
